resolve #669 When a chart is small in height, a lengthy dropdown is overlapped by the chart below

--- a/src/visualizationPanel.scss
+++ b/src/visualizationPanel.scss
@@ -87,6 +87,9 @@
   }
 }
 
+.sa-question-layouted:focus-within {
+  z-index: 1;
+}
 
 .sa-question__title {
   margin: 0;
